fix web style